@@ -21,6 +21,7 @@ Version 2.7.0-beta2 - 2011-06-22
 - added functionality of the TinyMCE save button (Gustavo Solt)
 - added basic reporting functionality (Gustavo Solt, Thorsten)
 - added IPv6 support (David Soria Parra)
+- added support for Single Sign On authentication (Thorsten)
 - improved usability in frontend and administration backend (Thorsten)
 - enabling Gzip compression by default (Thorsten)
 - updated bundled jQuery to version 1.5.1 (Thorsten)
